--- a/public/style.scss
+++ b/public/style.scss
@@ -24,7 +24,7 @@ html {
     padding-left: 10%; 
   }
 
-  .header-links {
+  &-links {
     padding: 0 10%;
     display: flex;
     flex-wrap: wrap;
@@ -114,14 +114,15 @@ html {
     margin: 5vh;
 
     &.one {
+      width: 100vw;
       flex-wrap: wrap;
       position: relative;
       left: -20vw;
 
       img {
-        width: 80vh;
+        width: 60%;
         height: 40vh;
-        object-fit: cover;
+        object-fit: contain;
         object-position: center;
       }
 
@@ -143,13 +144,13 @@ html {
       }
 
       p {
-        width: 70%
+        width: 70%;
       }
     }
 
     p {
-      text-align: center;
       box-sizing: border-box;
+      line-height: 1.5;
       padding: 20px 50px;
     }
 
@@ -260,13 +261,13 @@ html {
     display: flex;  
     flex-direction: column;
 
-  .footer-links {
+  &-links {
     width: 80vw;
     box-sizing: border-box;
 
     display: flex;
     justify-content: space-between;
-    align-self: end;
+    align-self: center;
 
     padding: 20px;
   }
@@ -277,21 +278,21 @@ html {
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-  }
 
-  .left a, .right a {
-    color: white;
-    text-decoration: none;
+    & a {
+      color: white;
+      text-decoration: none;
+  
+      font-family: Arial, Helvetica, sans-serif;
+      font-size: 1rem;
+      margin: 1vh;
+  
+      transition: all 0.4s;
 
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 1rem;
-    margin: 1vh;
-
-    transition: all 0.4s;
-  }
-
-  .left a:hover, .right a:hover {
-    transform: scale(1.2);
+      &:hover {
+        transform: scale(1.2);
+      }
+    }
   }
 
   img {
@@ -301,7 +302,7 @@ html {
   }
 
   .copyright {
-    width: 80vw;
+    width: 90vw;
 
     align-self: end;
     text-align: center;
@@ -316,19 +317,24 @@ html {
 
 @media screen and (max-width: 738px) {
   .section {
-  
+
     &.one {
     position: static !important;
     } 
 
+    img {
+      height: 100% !important;
+      width: 80% !important;
+    }
+    
     p {
-      width: 80vh !important;
+      width: 100vw !important;
     }
   }
 
   .contact-section {
     form {
-      width: 80vw;
+      width: 80vw !important;
     }
   }
 }
